--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,31 +1,63 @@
  <div class="user-details">
   <h1> My Expertise </h1>
-  <p> {{site.user_description}} </p>
+  <!--<p> {{site.user_description}} </p>-->
 </div>
   <div class="user">
     <div class="tech">
       <h2>Design</h2>
       <i class="devicon-html5-plain-wordmark colored"></i>
-      <i class="devicon-css3-plain-wordmark colored"></i>
-      <i class="devicon-bootstrap-plain-wordmark colored"></i>
-      <i class="devicon-sass-original colored"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      <i class="devicon-d3js-plain colored"></i>
+      <i class="devicon-angularjs-plain-wordmark colored"></i>
+      <i class="devicon-meteor-plain-wordmark colored"></i>
+      <!--<p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
+        Vinyl XOXO lumbersexual</p>-->
     </div>
     <div class="tech">
       <h2>Code</h2>
       <i class="devicon-javascript-plain colored"></i>
-      <i class="devicon-react-original-wordmark colored"></i>
-      <i class="devicon-nodejs-plain-wordmark"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      <i class="devicon-java-plain-wordmark colored"></i>
+      <i class="devicon-php-plain colored"></i>
+      <i class="devicon-python-plain-wordmark colored"></i>
     </div>
     <div class="tech">
       <h2>Tools</h2>
-      <i class="devicon-git-plain"></i>
-      <i class="devicon-gulp-plain colored"></i>
-      <i class="devicon-atom-original-wordmark"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      <i class="devicon-github-plain colored"></i>
+      <i class="devicon-android-plain-wordmark colored"></i>
+      <i class="devicon-visualstudio-plain-wordmark colored"></i>
+      <i class="devicon-nodejs-plain-wordmark colored"></i>
     </div>
-</div>
+    <div class="tech">
+      <h2>Data</h2>
+      <i class="devicon-mysql-plain-wordmark colored"></i>
+      <i class="devicon-mongodb-plain-wordmark colored"></i>
+      <i class="devicon-amazonwebservices-plain-wordmark colored"></i>
+    </div>
+   </div>
+   <p><small>Full list: Microsoft Office (Powerpoint, Word, Excel), HTML5, CSS3, Python, Java, JavaScript, PHP, 
+     C, C++, C#, Embedded C (Assembly Language), Android, MEANjs, Git, Angularjs, Bootstrap, 
+     Mobile Application, Software Development, MySQL, NoSQL, MongoDB, Eclipse, Netbeans, Android Studio, 
+     Visual Studio, Microsoft Azure, Big data, Hadoop, Code Composer Studio, Help Desk Support, Windows, 
+     Linux, Active directory, MVC, AWS, Ubuntu, Lotus notes, XAMPP, D3js, Meteorjs, Nodejs, 
+     Software Development Lifecycle, SCRUM, Agile, Software Management </small></p>
+
+     <div class="user-details">
+        <h1> My Education </h1>
+     </div>
+        <p><h4>SINGAPORE INSTITUTE OF TECHNOLOGY</h4><br>
+          Bachelor of Engineering with Honours in Information and Communications Technology (Software Engineering)                   
+        </p>
+        <li>The McLink Scholarship Recipient </li>
+          <p><h4>SINGAPORE POLYTECHNIC</h4><br>
+            Diploma in Info-Communication Engineering & Design
+          </p>
+          <li>Distinction in Mobile Applications Development</li>
+
+  <div class="user-details">
+    <h1> My Achievements </h1>
+  </div>
+    <p><h4>The McLink Scholarship – Academic Year 2015/2016</h4><br>
+    A scholarship from McLink Asia Pte Ltd for student pursuing a full-time degree programme in Information and Communications Technology at SIT with good academic results, made significant contributions beyond academic studies to the institute or the community, and have good character record.
+    </p>
+    <p><h4>National Youth Achievement Award – Silver, Bronze</h4><br>
+    A self-development programme in Singapore that equips youths with life skills to make a difference to themselves, their communities and the world. It is part of an international Award Programme operating in more than 130 countries worldwide under various titles. Requires taking a variety of voluntary and challenging activities in each of the 4 areas of the programme, namely Service, Adventurous Journey, Skills and Physical Recreation, to develop personal qualities of self-reliance, perseverance and a sense of responsibility to themselves, to society and to the nation
+  </p>
