--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -2,28 +2,95 @@
   <h1> Featured Projects </h1>
 </div>
 <div class="user-projects">
-  <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+    <div class="images-right">
+      <img alt="dso" src="{{ "/assets/img/dso.png" | prepend: site.baseurl }}" />
+    </div>
+    <div class="contents">
+      <h3> DSO NATIONAL LABORATORIES </h3>
+      <ul>
+      <li>Programmed and designed state of the art visualisations (Stacked Bar Chart, Grouped Bar Chart, Bubble Charts, Bar Chart), which is able to retrieve data from database and display the top 10 entities over the most recent 5 years which help to identify trends over the years on a web based platform.</li>
+      <li>Implemented features such as Filter and Sort which allows user to choose their preferred view and data to focus on.</li>
+      <li>Self-learnt D3.js, Meteor.js and MongoDB, that I had no prior experience of, helped me in designing and developing my visualisations, and retrieving data from database.</li>
+      </ul>
+    </div>
   </div>
-  <div class="contents">
-    <h3> Project Title </h3>
-    <ul>
-      <li> Featured Skills</li>
-    </ul>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <a class="project-link" href="#">Check it out</a>
+  <div class="user-projects">
+      <div class="images-left">
+        <img alt="i2r" src="{{ "/assets/img/i2r.jpg" | prepend: site.baseurl }}" />
+      </div>
+      <div class="contents-right">
+        <h3> INSTITUTE FOR INFOCOMM RESEARCH (I2R) – A*STAR </h3>
+        <ul>
+        <li>Programmed and designed a real time web based platform that is able to retrieve and store data from Twitter by keywords and/or location, where currently there is no solution in the market, and help to analyse users’ opinion influence, identify similar user groups, recognize commonality and personality of users' behaviours, and provide personalised recommendations over social media. </li>  
+        <li>Improved on current search solutions with just search purpose only and integrated new functions such as storage function using MySQL database, filtered out repeated tweets, and retrieving data in a daily basis, which help businesses by collecting data and knowing what the trend is and getting feedback on their products.</li>  
+        <li>Self-learnt XAMPP, MySQL, and PHP, that I had no prior experience of, and enhanced on my Java skill, which helped me in designing and linking my web interface to the server and database more efficiently. </li>          
+        </ul>
+      </div>
+    </div>
+
+<div class="user-details">
+    <h1> Featured Experience </h1>
   </div>
-</div>
+  <div class="user-projects">
+    <div class="images-right">
+      <img alt="5ca" src="{{ "/assets/img/5ca.png" | prepend: site.baseurl }}" />
+    </div>
+    <div class="contents">
+      <h3> 5CA (EPIC GAMES) </h3>
+      Gaming Support Agent (Remote)
+      <ul>
+      <li>Provides players and customer support via Helpdesk to solve any problems they might have with their games and products.</li>
+         <li>Helps players troubleshoot technical issues in different areas.</li>
+         <li>Assists colleagues and newcomers in areas they need help with or no access to as a senior tier agent.</li>
+        </ul>
+    </div>
+  </div>
+
+  <div class="user-projects">
+      <div class="images-left">
+        <img alt="asi" src="{{ "/assets/img/asi.jpg" | prepend: site.baseurl }}" />
+      </div>
+      <div class="contents-right">
+        <h3> ALPHA SYNERGY INTERNATIONAL </h3>
+        IT Contractor (Tech Refresh)
+        <ul>
+        <li>Assisted in imaging new laptops units and installation of standard software. Total of 900 units are expected to finish by end of the year.</li>
+        <li>Liaised with Command Centre and update the status twice daily where back end team will be informed to assist in moving OU and get back promptly when OU is moved. This helps to improve efficiency in completing the units.</li>
+        <li>Assisted in deployment when necessary. </li>
+        </ul>
+      </div>
+    </div>
+
 <div class="user-projects">
-  <div class="images-left">
-    <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
+    <div class="images-right">
+      <img alt="dksh" src="{{ "/assets/img/dksh.jpeg" | prepend: site.baseurl }}" />
+    </div>
+    <div class="contents">
+      <h3> DKSH SINGAPORE PTE LTD </h3>
+      IT Infrastructure Support
+      <ul>
+      <li>Attended to Service Desk phone calls and emails to provide first level IT support</li>
+      <li>Assisted in setting up new users' accounts and profiles and dealing with password issues.</li>
+      <li>Installed and configured computer hardware, software, systems, networks, printers and scanners.</li>
+      <li>Assisted in ticketing service which includes picking up tickets, and escalate tickets for the correct support.</li>
+      </ul>
+      <a class="project-link" href="mailto:huicheang403@gmail.com?subject=Request for DKSH Testimonial">Request for Testimonial</a>
+    </div>
   </div>
-  <div class="contents-right">
-    <h3> Project Title </h3>
-    <ul>
-      <li> Featured Skills</li>
-    </ul>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <a class="project-link" href="#">Check it out</a>
-  </div>
-</div>
+
+  <div class="user-projects">
+      <div class="images-left">
+        <img alt="servtouch" src="{{ "/assets/img/servtouch.jpg" | prepend: site.baseurl }}" />
+      </div>
+      <div class="contents-right">
+        <h3> SERVTOUCH-WYWY (S) PTE LTD </h3>
+        Internship
+        <ul>
+        <li>Supported the sales/marketing team by co-ordinating with the customer support for the Kodak dealer and consumers in the Photo Book operations for the whole of Singapore.</li>
+        <li>Produced weekly and monthly sales reports for the managements and attended weekly meetings to report to the team on the weekly progress, ensuring that our performances are satisfactory.</li>
+        <li>Joined the New Media team for major projects such as Sentosa Gives and NSMen Engagement Day for instant photo printing and videography, and uploaded over thousands of photos online on time.</li>
+        <li>Involved with a project task force for market survey of consumer behaviour for new media products, and came out with new ideas to improve on our current products, with budget consideration and completed on time.</li>  
+          </ul>
+        <a class="project-link" href="mailto:huicheang403@gmail.com?subject=Request for SERVTOUCH-WYWY Testimonial">Request for Testimonial</a>
+      </div>
+    </div>
