--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,12 +2,16 @@
   <div class="header">
       <h1>
         <span class="site-title">{{site.username}}</span>
-        <!--<span class="site-description">{{site.user_title}}</span>-->
+        <span class="site-description">{{site.user_title}}</span>
       </h1>
       <div class="header-icons">
         <a aria-label="Send email" href="mailto:huicheang2403@gmail.com"><i class="icon fa fa-envelope"></i></a>
         <a aria-label="My LinkedIn" target="_blank" href="https://www.linkedin.com/in/chiamhuicheang/"><i class="icon fa fa-linkedin" aria-hidden="true"></i></a>
         <a aria-label="My GitHub" target="_blank" href="https://github.com/huicheang"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
+        <a aria-label="My Facebook" target="_blank" href="https://www.facebook.com/chiamhuicheang"><i class="icon fa fa-facebook" aria-hidden="true"></i></a>
+        <a aria-label="My Instagram" target="_blank" href="http://instagram.com/x_ashc"><i class="icon fa fa-instagram" aria-hidden="true"></i></a>
+        <a aria-label="My Twitter" target="_blank" href="https://twitter.com/haigesea"><i class="icon fa fa-twitter" aria-hidden="true"></i></a>
+        
         <!--<a aria-label="My Twitter" target="_blank" href="#"><i class="icon fa fa-twitter" aria-hidden="true"></i></a>-->
         <!--<a aria-label="My Google Plus" target="_blank" href="#"><i class="icon fa fa-google-plus" aria-hidden="true"></i></a>-->
         </div>
